# monopticon

./: .editorconfig  .gitignore  .travis.yml  BUILDING.md  CMakeLists.txt  LICENSE.txt  README.md  TODO.md  bro-peer-connector.bro  device_chart.cpp  eth_device.cpp  evenbettercap.cc  evenbettercap.cpp  evenbettercap.h  figure.cpp  monopt_iface_proto.sh  resources.conf
contrib/: PKGBUILD
contrib/expirements/animation/: CMakeLists.txt  anim2d.cpp
contrib/expirements/arp-spoof/: README.md  script.js
contrib/expirements/auralcap/: CMakeLists.txt  README.md  csound_threaded.cpp  netplayback.sh  resources.conf  roboconductor.cc  roboconductor.cpp  sound-filters.zeek
contrib/expirements/auralcap/clean/: orchestra.csd  pluck-sound.csd  pre-piano.csd  short-sample.csd  toot10.csd
contrib/expirements/portmanifold/: CMakeLists.txt  README.md  attack-device-monitor.zeek  manifold.cpp
contrib/expirements/ws/: CMakeLists.txt  README.md  addressbook.proto  epoch.proto  python_webs.py  test_websocket_send.c  websock_proto.cpp
contrib/expirements/ws/mux_server/: CMakeLists.txt  README.md  README.txt  epoch.pb.cpp  epoch.pb.hpp  input_parser.cpp  monopt-site  mux_server.cpp
contrib/expirements/ws/newproto/: epoch.pb.cc  epoch.pb.h
modules/: FindBroker.cmake  FindImGui.cmake  FindMagnumIntegration.cmake
pkg/: Dockerfile
pkg/arch/: PKGBUILD
pkg/ci/: travis.yml
pkg/docker/: Dockerfile
pkg/docker/emscripten/: Dockerfile
pkg/docker/ubuntu/: Dockerfile
shaders/: packetline.fs  packetline.vs  phongid.vs  pool.fs  pool.vs
src/: bro-peer-connector.bro  context.cpp  eth_device.cpp  evenbettercap.cpp  evenbettercap.h  figure.cpp  input_parser.cpp  layout.cpp  ld.so.conf  levelthree.cpp  simpopticon.cpp  translate_ctrl.cpp  util.cpp  ws_context.cpp  xxx.cpp
src/assets/: cube-wire.fbx  cyberlab.xml  interface.fbx  router-toro.fbx  sample-devs.xml  sample-layout-drawio.xml
src/assets/app-entry/: monopticon.desktop
src/expirements/arp-spoof/: README.md
src/expirements/netevent/: epoch_event.zeek  identify_routers.zeek
src/expirements/portmanifold/: README.md  attack-device-monitor.zeek  manifold.cpp
src/scripts/: CMakeLists.txt  README.md  epoch_event.zeek  l2_eth_monitor.bro  monopt_iface_proto.sh
src/shaders/: packetline.fs  packetline.vs  phongid.fs  phongid.vs  pool.fs  pool.vs  worldlink.fs  worldlink.vs
src/web/: README.md  WebApplication.css  index.html
